[gd_scene load_steps=4 format=3 uid="uid://rrmcp8e7ajqn"]

[ext_resource type="Script" uid="uid://c577e04d6aotv" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Shader" uid="uid://bwelmk77a5ceq" path="res://scenes/Shaders/blur.gdshader" id="2_kukqi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mqh5l"]
shader = ExtResource("2_kukqi")
shader_parameter/lod = 2.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mqh5l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.99607843, 0.5882353)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.52391976
anchor_top = 0.2736111
anchor_right = 0.52391976
anchor_bottom = 0.33888888
offset_left = -110.0
offset_right = 110.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "PAUSED"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
